--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -24,3 +24,5 @@ a { color: #8D0D19;}
   background: #1A446C;  color: #D4E6F4; }
 
 table.bordered tr th, table.bordered tr td { border: 1px solid #000000; }
+
+#pagination .selected {font-weight: bold; color: #8D0D19;}
